* ltmain.in (deplibs_check_method=none): discard -L and -R switches when testing whether deplibs contains some library

--- a/ltmain.in
+++ b/ltmain.in
@@ -1868,8 +1868,9 @@ EOF
 	  done # Gone through all deplibs.
 	  ;;
 	none | unknown | *) newdeplibs=""
-	  if $echo "X$deplibs" | $Xsed -e 's/ -lc$//' -e 's/[ 	]//g' \
-	     | grep . >/dev/null; then
+	  if $echo "X $deplibs" |
+	     $Xsed -e 's/ -lc$//' -e 's/ -[LR][^ ]*//g' -e 's/[ 	]//g' |
+	     grep . >/dev/null; then
 	    echo
 	    if test "X$deplibs_check_method" = "Xnone"; then
 	      echo "*** Warning: inter-library dependencies are not supported in this platform."
