--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -2,28 +2,27 @@
 
 AUTOMAKE_OPTIONS = gnits
 
-TESTS = demo-static.test demo-make.test demo-exec.test \
+TESTS = cdemo-static.test cdemo-make.test cdemo-exec.test \
+	demo-static.test demo-make.test demo-exec.test \
 	demo-inst.test demo-unst.test \
 	mdemo-static.test mdemo-make.test mdemo-exec.test \
 	mdemo-inst.test mdemo-unst.test \
-	cdemo-static.test cdemo-make.test cdemo-exec.test \
+	cdemo-conf.test cdemo-make.test cdemo-exec.test \
 	demo-conf.test demo-make.test demo-exec.test \
 	demo-inst.test demo-unst.test \
 	mdemo-conf.test mdemo-make.test mdemo-exec.test \
 	mdemo-inst.test mdemo-unst.test \
-	cdemo-conf.test cdemo-make.test cdemo-exec.test \
 	demo-nofast.test demo-make.test demo-exec.test \
 	demo-inst.test demo-unst.test \
+	cdemo-shared.test cdemo-make.test cdemo-exec.test \
 	demo-shared.test demo-make.test demo-exec.test demo-inst.test \
-	hardcode.test build-relink.test \
-	demo-unst.test \
+	hardcode.test build-relink.test demo-unst.test \
 	mdemo-shared.test mdemo-make.test mdemo-exec.test \
 	mdemo-inst.test mdemo-unst.test \
-	cdemo-shared.test cdemo-make.test cdemo-exec.test \
-	link.test link-2.test nomode.test \
+	assign.test link.test link-2.test nomode.test \
 	quote.test sh.test suffix.test
 
-demo-conf.test: $(top_builddir)/libtool
+cdemo-static.test: $(top_builddir)/libtool
 
 $(top_builddir)/libtool:
 	cd $(top_builddir) && $(MAKE) all
@@ -36,7 +35,7 @@ EXTRA_DIST = defs $(TESTS)
 
 # We need to remove any files that the above tests created.
 clean-local:
-	-test -f ../demo/Makefile && cd ../demo && $(MAKE) distclean
 	-test -f ../cdemo/Makefile && cd ../cdemo && $(MAKE) distclean
+	-test -f ../demo/Makefile && cd ../demo && $(MAKE) distclean
 	-test -f ../mdemo/Makefile && cd ../mdemo && $(MAKE) distclean
 	rm -rf _inst
