* NEWS: improved support for BeOS and Cygwin * libltdl/ltdl.c: added two new error messages (cannot_open_error,   cannot_close_error), use them where approriate,   BeOS support (thanks to Xavier Pianet), on BeOS search modules   additionally in ADDON_PATH * libtool.m4: rewrote AC_CHECK_LIBM: BeOS and Cygwin don't have   libm and *-ncr-sysv4.3* requires libmw * ltconfig.in: don't check for LoadLibrary, hardcode dlopen   configuration for BeOS and Cygwin * ltmain.in: ignore -lm on BeOS and Cygwin, always ignore -lc

--- a/ltmain.in
+++ b/ltmain.in
@@ -1010,6 +1010,17 @@ compiler."
 	;;
 
       -l*)
+	if test "$arg" = "-lm"; then
+	  case "$host" in
+	  *-*-cygwin* | *-*-beos*)
+	    # Ignore -lm on Cygwin and BeOS
+	    continue
+	    ;;
+	  esac	
+	elif test "$arg" = "-lc"; then
+	  # Always ignore -lc
+	  continue
+	fi
 	deplibs="$deplibs $arg"
 	;;
 
