--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,10 +1,5 @@
-## Process Makefile.am with automake to create Makefile.in. -*-Makefile-*-
-##
-## Copyright (C) 1996 Free Software Foundation, Inc.
-## This Makefile.am is free software; the Free Software Foundation
-## gives unlimited permission to copy, distribute and modify it.
-##
-## Written by Gordon Matzigkeit <gord@gnu.ai.mit.edu>
+## Process this file with automake to produce Makefile.in
+
 AUTOMAKE_OPTIONS = gnits
 info_TEXINFOS = libtool.texi
 libtool_TEXINFOS = PLATFORMS
