--- a/mdemo/Makefile.am
+++ b/mdemo/Makefile.am
@@ -1,5 +1,5 @@
-# A brief demonstration of Libtool modules. -*-Makefile-*-
-#
+## Process this file with automake to produce Makefile.in
+
 AUTOMAKE_OPTIONS = no-dependencies foreign
 
 INCLUDES = -I$(srcdir)/../libltdl
