--- a/cdemo/configure.in
+++ b/cdemo/configure.in
@@ -1,4 +1,5 @@
-dnl Initialize the cdemo package.
+dnl Process this file with autoconf to create configure.
+
 AC_INIT(main.c)
 AM_INIT_AUTOMAKE(cdemo,0.1)
 
