--- a/mdemo/configure.in
+++ b/mdemo/configure.in
@@ -1,4 +1,5 @@
-dnl Initialize the mdemo package.
+dnl Process this file with autoconf to create configure.
+
 AC_INIT(main.c)
 AM_INIT_AUTOMAKE(mdemo,0.1)
 
